--- a/package.json
+++ b/package.json
@@ -45,17 +45,6 @@
     ]
   },
   "devDependencies": {
-    "@sheerun/mutationobserver-shim": "0.3.3",
-    "eslint": "^8.10.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-google": "^0.14.0",
-    "eslint-config-trybe-frontend": "1.2.2",
-    "eslint-config-xo": "^0.40.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.29.2",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "stylelint": "13.8.0",
-    "stylelint-order": "4.1.0"
+    "@sheerun/mutationobserver-shim": "0.3.3"
   }
 }
